--- a/components/Detail/Creatie/Feedback/feedback.module.css
+++ b/components/Detail/Creatie/Feedback/feedback.module.css
@@ -1,64 +1,102 @@
 @value tokens: "../../../../css/tokens.module.css";
 @value blueColor, yellowColor, beigeColor, redColor, greenColor, lightColor from tokens;
 
-.feedback {
-    z-index: 2;
-    list-style-type: none;
-    align-self: flex-end;
-    margin-top: auto;
-    display: flex;
-    flex-direction: column-reverse;
+.part_feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  width: 30rem;
 }
 
-.feedback:nth-child(even) {
-    margin-bottom: auto;
-    margin-top: unset;
-    display: flex;
-    flex-direction: column;
+.feedback {
+  z-index: 2;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column-reverse;
+  position: absolute;
+  bottom: 0;
+}
+
+/* .part_feedback:nth-of-type(even) {
+  display: flex;
+  flex-direction: column;
+} */
+
+.part_feedback:nth-child(even) .feedback {
+  top: 0;
+  bottom: unset;
+  flex-direction: column;
 }
 
 .feedback_card {
-    border: .3rem solid blueColor;
-    padding: 3rem 2rem;
-    position: relative;
-    background-color: beigeColor;
-    width: 35rem;
-    height: 25rem;
-    margin: 1.5rem 0;
+  border: 0.3rem solid blueColor;
+  padding: 3rem 2rem;
+  position: relative;
+  background-color: beigeColor;
+  width: 35rem;
+  height: 25vh;
+  margin: 1.5rem 0;
 }
 
 .feedback_card:after {
-    content: '';
-    position: absolute;
-    display: block;
-    background: inherit;
-    border-radius: inherit;
-    border: inherit;
-    top:4%;
-    left:4%;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    transition: all 0.2s ease-in-out;
-  }
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 4%;
+  left: 4%;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
 
 .feedback_name {
-    composes: smallCaps from '../../../../css/typo.module.css';
-    margin-bottom: 2rem;
+  composes: smallCaps from '../../../../css/typo.module.css';
+  margin-bottom: 2rem;
 }
 
 .feedback_date {
-    composes: smallText from '../../../../css/typo.module.css';
-    text-align: center;
-    margin-top: .5rem;
+  composes: smallText from '../../../../css/typo.module.css';
+  text-align: center;
+  margin-top: 0.5rem;
 }
 
 .feedback_type {
-    composes: smallCaps from '../../../../css/typo.module.css';
-    text-align: center;
+  composes: smallCaps from '../../../../css/typo.module.css';
+  text-align: center;
 }
 
 .feedback_text {
-    composes: feedback from '../../../../css/typo.module.css';
-    font-style: italic;
+  composes: feedback from '../../../../css/typo.module.css';
+  font-style: italic;
+}
+
+.feedback_icon {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  z-index: 1;
+}
+
+.icon_circle {
+  text-align: center;
+  background-color: greenColor;
+  padding: 1rem;
+  border-radius: 50%;
+  display: inline-block;
+  border: 0.3rem solid blueColor;
+}
+
+.part_feedback:nth-child(even) .feedback_icon .icon_circle {
+  text-align: center;
+  background-color: yellowColor;
+  padding: 1rem;
+  border-radius: 50%;
+  display: inline-block;
+  border: 0.3rem solid blueColor;
 }
