--- a/components/Detail/Creatie/creatie.module.css
+++ b/components/Detail/Creatie/creatie.module.css
@@ -2,22 +2,43 @@
 @value blueColor, yellowColor, beigeColor, redColor, greenColor, lightColor from tokens;
 
 .feedback_timeline {
-    display: flex;
-    height: 100%;
-    flex-direction: row;
+  display: flex;
+  height: 100%;
+  flex-direction: row;
 }
 
 .timeline {
-    position: relative;
-    display: flex;
-    flex-direction: row;
+  position: relative;
+  display: flex;
+  flex-direction: row;
 }
 
 .timeline_line {
-    position: absolute;
-    top: 50%;
-    height: .4rem;
-    background-color: blueColor;
-    width: 100%;
-    left: 0;
+  position: absolute;
+  top: 50%;
+  height: 0.3rem;
+  background-color: blueColor;
+  width: 100%;
+  left: 0;
+}
+
+.form_feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: beigeColor;
+  z-index: 1;
+  margin: 0 10rem;
+}
+
+.feedback_card {
+  z-index: 1;
+  height: 25rem;
+  width: 50rem;
+  border: 0.3rem solid blueColor;
+  background-color: beigeColor;
+}
+
+.subtitle {
+  composes: mediumTitle from '../../../css/typo.module.css';
 }
