--- a/css/profile.module.css
+++ b/css/profile.module.css
@@ -7,7 +7,7 @@
 
 .tabs {
   border-bottom: 0.4rem solid blueColor;
-  margin-bottom:8rem;
+  margin-bottom: 8rem;
 }
 
 .tabs_title {
@@ -171,24 +171,23 @@
 }
 
 @media screen and (max-width: 1500px) {
-
   .grid_notifications,
   .grid_notifications__items {
     padding-right: 4rem;
   }
-  
+
   .grid_requests,
   .grid_requests__items {
     padding-right: 4rem;
   }
-  
+
   .grid_selectedproject,
   .grid_selectedproject__items {
     padding-right: 4rem;
     grid-column-gap: 3rem;
     grid-row-gap: 3rem;
   }
-  }
+}
 
 @media screen and (max-width: 1250px) {
   .grid_selectedproject,
@@ -197,7 +196,6 @@
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
   }
-  
 }
 
 @media screen and (max-width: 1150px) {
@@ -220,38 +218,45 @@
     grid-column: span 2;
     margin-top: 5rem;
   }
-  
 }
 
 @media screen and (max-width: 1000px) {
+  .grid_notifications,
+  .grid_notifications__items {
+    grid-template-columns: 1.2fr 1fr 1fr 2fr 0.5fr;
+    padding-right: 2rem;
+  }
 
-.grid_notifications,
-.grid_notifications__items {
-  grid-template-columns: 1.2fr 1fr 1fr 2fr 0.5fr;
-  padding-right: 2rem;
-}
+  .grid_requests,
+  .grid_requests__items {
+    padding-right: 2rem;
+    grid-template-columns: 5rem 1.2fr 1fr 2fr 0.5fr;
+  }
 
-.grid_requests,
-.grid_requests__items {
-  padding-right: 2rem;
-  grid-template-columns: 5rem 1.2fr 1fr 2fr 0.5fr;
-}
-
-.grid_selectedproject,
-.grid_selectedproject__items {
-  padding-right: 2rem;
-}
+  .grid_selectedproject,
+  .grid_selectedproject__items {
+    padding-right: 2rem;
+  }
 }
 
 @media screen and (max-width: 850px) {
-
   .tabs {
-    margin-bottom:4rem;
+    margin-bottom: 4rem;
     overflow-x: scroll;
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
     white-space: nowrap;
+  }
+
+  .tabs::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .tabs {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 
   .tabs_title {
