--- a/components/Detail/Creatie/creatie.module.css
+++ b/components/Detail/Creatie/creatie.module.css
@@ -31,14 +31,125 @@
   margin: 0 10rem;
 }
 
-.feedback_card {
-  z-index: 1;
+.form_card {
   height: 25rem;
   width: 50rem;
   border: 0.3rem solid blueColor;
   background-color: beigeColor;
+  padding: 2rem;
+  position: relative;
+  margin: 2rem 0;
 }
 
-.subtitle {
-  composes: mediumTitle from '../../../css/typo.module.css';
+.form_card:after {
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 5%;
+  left: 3%;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  transition: all 0.2s ease-in-out;
+}
+
+.form_title {
+  composes: bold from '../../../css/typo.module.css';
+}
+
+.form_number {
+  composes: number from '../../../css/typo.module.css';
+}
+
+.form_radio {
+  display: none;
+}
+
+.form_card__one {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form_option {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  cursor: pointer;
+}
+
+.form_option img {
+  margin-right: 1rem;
+}
+
+.form_option__text {
+  composes: smallCaps from '../../../css/typo.module.css';
+  margin-top: 1rem;
+}
+
+.form_input {
+  border: none;
+  background-color: transparent;
+  composes: empty from '../../../css/typo.module.css';
+  height: 15.5rem;
+  width: 45rem;
+  resize: none;
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+
+.form_buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button_back {
+  composes: buttonBack from '../../../css/buttons.module.css';
+}
+
+.back_image {
+  margin-right: 0.5rem;
+}
+
+.back_text {
+  composes: bold from '../../../css/typo.module.css';
+}
+
+.checkbox {
+  display: none;
+}
+
+.voorzien {
+  z-index: 2;
+}
+
+.button_voorzien {
+  border: 0.2rem solid blueColor;
+  padding: 0.6rem 0.8rem;
+  position: relative;
+  background-color: beigeColor;
+  composes: text from '../../../css/typo.module.css';
+}
+
+.voorzien_three {
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.button_voorzien:after {
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 0.7rem;
+  left: 0.7rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
 }
