--- a/css/styles.css
+++ b/css/styles.css
@@ -402,6 +402,48 @@ html.has-scroll-dragging {
   opacity: 1;
 }
 
+.icon-circle--aanpassing {
+  background-color: rgb(79, 200, 177);
+}
+
+.icon-circle--toevoeging {
+  background-color: rgb(245, 224, 39);
+}
+
+.icon-circle--overig {
+  background-color: rgb(254, 79, 81);
+}
+
+.form_card__two__toevoeging:before {
+  content: url('../public/assets/creatie/creatie_toevoeging_form_extra.svg');
+  position: absolute;
+  display: block;
+  right: -12%;
+  top: -28%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+.form_card__two__aanpassing:before {
+  content: url('../public/assets/creatie/creatie_aanpassing_form_extra.svg');
+  position: absolute;
+  display: block;
+  right: -12%;
+  top: -28%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+.form_card__two__overig:before {
+  content: url('../public/assets/creatie/creatie_overig_form_extra.svg');
+  position: absolute;
+  display: block;
+  right: -12%;
+  top: -28%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
 @media screen and (max-width: 850px) {
   .nav-logo {
     display: none;
