--- a/css/styles.css
+++ b/css/styles.css
@@ -30,93 +30,15 @@ a {
   text-decoration: none;
 }
 
-/* Page Loader */
-.js .loading::before,
-.js .loading::after {
-  content: '';
-  position: fixed;
-  z-index: 1000;
-}
-
-.js .loading::before {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--color-bg);
-}
-
-.js .loading::after {
-  top: 50%;
-  left: 50%;
-  width: 60px;
-  height: 60px;
-  margin: -30px 0 0 -30px;
-  border-radius: 50%;
-  opacity: 0.4;
-  background: var(--color-link);
-  animation: loaderAnim 0.7s linear infinite alternate forwards;
-}
-
-@keyframes loaderAnim {
-  to {
-    opacity: 1;
-    transform: scale3d(0.5, 0.5, 1);
-  }
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 13rem);
-  position: relative;
-  justify-content: flex-start;
-}
-
 .cursor {
   display: none;
 }
 
-@media screen and (min-width: 53em) {
-  .frame {
-    position: fixed;
-    text-align: left;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    display: grid;
-    align-content: space-between;
-    width: 100%;
-    max-width: none;
-    padding: 1.75rem;
-    pointer-events: none;
-    grid-template-columns: auto 1fr 1fr auto;
-    grid-template-rows: auto;
-    grid-template-areas: 'title demos demos links';
-  }
-  .frame__title {
-    margin: 0 4rem 0 0;
-    grid-area: title;
-  }
-  .frame__info {
-    grid-area: info;
-  }
-  .frame__demos {
-    grid-area: demos;
-  }
-  .frame__links {
-    grid-area: links;
-    padding: 0;
-    justify-self: end;
-  }
-  .frame a {
-    pointer-events: auto;
-  }
-  .content {
-    height: 100vh;
-    justify-content: center;
-  }
+.content {
+  height: 100vh;
 }
+
+/* Mouse */
 
 @media (any-pointer: fine) {
   .cursor {
@@ -159,67 +81,17 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-container] {
+[data-scroll-direction="horizontal"] [data-scroll-container] {
   /* white-space: nowrap; */
   height: 100vh;
   display: inline-block;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-section] {
+[data-scroll-direction="horizontal"] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
   height: 100%;
-}
-
-.c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100%;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0;
-}
-.c-scrollbar:hover {
-  transform: scaleX(1.45);
-}
-.c-scrollbar:hover,
-.has-scroll-scrolling .c-scrollbar,
-.has-scroll-dragging .c-scrollbar {
-  opacity: 1;
-}
-[data-scroll-direction='horizontal'] .c-scrollbar {
-  width: 100%;
-  height: 10px;
-  top: auto;
-  bottom: 0;
-  transform: scaleY(1);
-}
-[data-scroll-direction='horizontal'] .c-scrollbar:hover {
-  transform: scaleY(1.3);
-}
-
-.c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-.has-scroll-dragging .c-scrollbar_thumb {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-}
-[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
-  right: auto;
-  bottom: 0;
 }
 
 /* Navigation */
@@ -415,7 +287,7 @@ html.has-scroll-dragging {
 }
 
 .form_card__two__toevoeging:before {
-  content: url('../public/assets/creatie/creatie_toevoeging_form_extra.svg');
+  content: url("../public/assets/creatie/creatie_toevoeging_form_extra.svg");
   position: absolute;
   display: block;
   right: -12%;
@@ -425,7 +297,7 @@ html.has-scroll-dragging {
 }
 
 .form_card__two__aanpassing:before {
-  content: url('../public/assets/creatie/creatie_aanpassing_form_extra.svg');
+  content: url("../public/assets/creatie/creatie_aanpassing_form_extra.svg");
   position: absolute;
   display: block;
   right: -12%;
@@ -435,7 +307,7 @@ html.has-scroll-dragging {
 }
 
 .form_card__two__overig:before {
-  content: url('../public/assets/creatie/creatie_overig_form_extra.svg');
+  content: url("../public/assets/creatie/creatie_overig_form_extra.svg");
   position: absolute;
   display: block;
   right: -12%;
@@ -445,6 +317,24 @@ html.has-scroll-dragging {
 }
 
 @media screen and (max-width: 850px) {
+  .content {
+    height: unset;
+    display: flex;
+    flex-direction: column;
+  }
+
+  [data-scroll-direction="vertical"] [data-scroll-container] {
+    /* white-space: nowrap; */
+    height: 100vh;
+    display: inline-block;
+  }
+
+  [data-scroll-direction="vertical"] [data-scroll-section] {
+    display: inline-block;
+    vertical-align: top;
+    white-space: nowrap;
+    height: 100%;
+  }
   .nav-logo {
     display: none;
   }
