--- a/css/home.css
+++ b/css/home.css
@@ -88,6 +88,52 @@
   align-items: center;
 }
 
+/* Ontdek Durf 2030 */
+
+.home_start {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 6rem;
+}
+
+/* Large Text Durf 2030 */
+
+.home_text {
+  position: relative;
+}
+
+.text_start {
+  font-size: 10vw;
+  text-transform: uppercase;
+  -webkit-text-stroke: 0.4rem #091422;
+  text-stroke: 0.4rem #091422;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  font-weight: 900;
+  font-family: Montserrat;
+  margin-bottom: -10%;
+  position: relative;
+}
+
+.text-large--fill {
+  -webkit-text-fill-color: #091422;
+  text-fill-color: #2c2d30;
+  white-space: nowrap;
+}
+
+.text-large--inner {
+  font-size: 9vw;
+  white-space: nowrap;
+}
+
+/* Durf 2030 Tekst + Buttons */
+
+.home_start__info {
+  margin-top: -10%;
+}
+
 .home_subtitle {
   font-family: Montserrat, sans-serif;
   font-weight: 600;
@@ -126,110 +172,6 @@
   display: inline-block;
   padding: 0.5rem 0;
   color: #091422;
-}
-
-.home_text {
-  position: relative;
-}
-
-.text_start {
-  font-size: 10vw;
-  text-transform: uppercase;
-  -webkit-text-stroke: 0.4rem #091422;
-  text-stroke: 0.4rem #091422;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  font-weight: 900;
-  font-family: Montserrat;
-  margin-bottom: -10%;
-  position: relative;
-}
-
-.text-large--fill {
-  -webkit-text-fill-color: #091422;
-  text-fill-color: #2c2d30;
-  white-space: nowrap;
-}
-
-.text-large--inner {
-  font-size: 9vw;
-  white-space: nowrap;
-}
-
-.home_start {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-right: 6rem;
-}
-
-.home_start__info {
-  margin-top: -10%;
-}
-
-.home_end__info {
-  margin-top: 5rem;
-}
-
-.text_end {
-  font-size: 14rem;
-  text-transform: uppercase;
-  -webkit-text-stroke: 0.4rem #091422;
-  text-stroke: 0.4rem #091422;
-  -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
-  font-weight: 900;
-  font-family: Montserrat;
-}
-
-.home_end {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /* margin-left: 10rem; */
-}
-
-.home_end__buttons {
-  display: flex;
-  align-items: center;
-}
-
-.home_button__start {
-  font-family: Montserrat, sans-serif;
-  font-weight: 800;
-  font-size: 1.2rem;
-  letter-spacing: 0.05rem;
-  text-transform: uppercase;
-  color: #091422;
-  padding: 1rem 3rem;
-  border: 0.2rem solid #091422;
-  margin-right: 2rem;
-  position: relative;
-  background-color: #fdecd2;
-  cursor: pointer;
-}
-
-.home_button__start:after {
-  content: "";
-  position: absolute;
-  display: block;
-  background: inherit;
-  border-radius: inherit;
-  border: inherit;
-  top: 0.7rem;
-  left: 0.7rem;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-}
-
-.home_button__start:hover .home_button__start:after {
-  top: 0;
-  left: 0;
 }
 
 .button {
@@ -298,6 +240,74 @@
   }
 }
 
+/* End Nieuw Project */
+
+.home_end__info {
+  margin-top: 5rem;
+}
+
+/* Start Nu jouw Project */
+
+.text_end {
+  font-size: 14rem;
+  text-transform: uppercase;
+  -webkit-text-stroke: 0.4rem #091422;
+  text-stroke: 0.4rem #091422;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  font-weight: 900;
+  font-family: Montserrat;
+}
+
+.home_end {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* margin-left: 10rem; */
+}
+
+.home_end__buttons {
+  display: flex;
+  align-items: center;
+}
+
+.home_button__start {
+  font-family: Montserrat, sans-serif;
+  font-weight: 800;
+  font-size: 1.2rem;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
+  color: #091422;
+  padding: 1rem 3rem;
+  border: 0.2rem solid #091422;
+  margin-right: 2rem;
+  position: relative;
+  background-color: #fdecd2;
+  cursor: pointer;
+}
+
+.home_button__start:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 0.7rem;
+  left: 0.7rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.home_button__start:hover .home_button__start:after {
+  top: 0;
+  left: 0;
+}
+
 @media screen and (max-width: 1050px) {
   .text_start {
     font-size: 12vw;
@@ -340,46 +350,82 @@
 }
 
 @media screen and (max-width: 850px) {
-  /* .gallery {
-    display: flex;
-    margin-left: 5vw;
-    margin-right: 12vw;
-    height: unset;
-    align-items: unset;
-    flex-direction: column;
-  } */
-
-  /* .home_start {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 0;
-  } */
-
   .gallery {
-    margin-left: 5vw;
+    margin-left: 0;
+    margin-right: 0;
     display: flex;
-    flex-direction: column;
   }
 
-  .cards {
+  /* .cards {
     display: flex;
-    height: 100%;
+    height: unset;
     justify-content: top;
     align-items: center;
     margin-right: 0;
-    flex-direction: column;
   }
 
   .card {
-    width: 35rem;
+    width: 80%;
     position: relative;
-    margin: 0 8rem;
-  }
+    margin: 0;
+    align-self: unset;
+  } */
 
   .card:nth-child(even) {
-    align-self: center;
+    align-self: unset;
+  }
+
+  /* Large Text Durf 2030 */
+
+  .text_start {
+    font-size: 10vw;
+    text-transform: uppercase;
+    -webkit-text-stroke: 0.2rem #091222;
+    text-stroke: 0.4rem #091422;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+    font-weight: 900;
+    margin-bottom: unset;
+  }
+
+  .text-large--fill {
+    -webkit-text-fill-color: #091422;
+    text-fill-color: #2c2d30;
+    white-space: nowrap;
+  }
+
+  .text-large--inner {
+    font-size: 9vw;
+    white-space: nowrap;
+  }
+
+  /* Durf 2030 Tekst + Buttons */
+
+  .home_start__info {
+    margin-top: unset;
+  }
+
+  .home_start {
+    margin-right: unset;
+    margin-top: unset;
+  }
+
+  .home_subtitle {
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    color: blueColor;
+    margin-bottom: unset;
+    width: 100%;
+  }
+
+  .home_start__buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home_button__arrow {
+    display: flex;
+    flex-direction: column;
   }
 }
