--- a/css/buttons.module.css
+++ b/css/buttons.module.css
@@ -14,11 +14,12 @@
   border-radius: 50%;
   display: block;
   padding: 0.5rem;
-  width: 100%;
+  width: 10rem;
+  height: 10rem;
 }
 
 .circleButton:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -73,7 +74,7 @@
 }
 
 .smallCircleButton:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -125,7 +126,7 @@
 }
 
 .miniCircleButton:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
