--- a/css/buttons.module.css
+++ b/css/buttons.module.css
@@ -45,6 +45,9 @@
   animation: rotation 4s infinite linear;
   animation-play-state: paused;
   webkit-animation-play-state: paused;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .button:hover .buttonImage {
@@ -163,4 +166,17 @@
   background-color: transparent;
   border: none;
   padding: 0.5rem;
+}
+
+@media screen and (max-width: 550px) {
+  .circleButton {
+    background-color: yellowColor;
+    border: 0.2rem solid blueColor;
+    position: relative;
+    border-radius: 50%;
+    display: block;
+    padding: 0.5rem;
+    width: 9rem;
+    height: 9rem;
+  }
 }
