--- a/css/styles.css
+++ b/css/styles.css
@@ -22,35 +22,6 @@ html.has-scroll-init {
   user-select: none;
 } */
 
-.has-scroll-smooth body {
-  overflow: hidden;
-}
-
-.has-scroll-init body {
-  overflow: hidden;
-}
-
-.has-scroll-smooth .data-scroll-container-home {
-  min-height: 100vh;
-}
-
-[data-scroll-direction='horizontal'] .data-scroll-container-home {
-  /* white-space: nowrap; */
-  height: 100vh;
-  display: inline-block;
-}
-
-@media screen and (max-width: 850px) {
-  .has-scroll-smooth .data-scroll-container-home {
-    min-height: unset;
-  }
-
-  [data-scroll-direction='horizontal'] .data-scroll-container-home {
-    height: unset;
-    display: inline-block;
-  }
-}
-
 #__next {
   min-height: 100vh;
   background-color: #fdecd2;
@@ -83,10 +54,6 @@ a {
   height: 100vh;
 }
 
-.data-scroll-container-home {
-  position: relative;
-}
-
 /* Mouse */
 
 @media (any-pointer: fine) {
@@ -109,64 +76,6 @@ a {
     display: none;
   }
 }
-
-/* [data-scroll-direction="horizontal"] [data-scroll-section] {
-  display: inline-block;
-  vertical-align: top;
-  white-space: nowrap;
-  height: 100%;
-} */
-
-/* .c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100%;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0;
-}
-
-.c-scrollbar:hover {
-  transform: scaleX(1.45);
-}
-.c-scrollbar:hover,
-.has-scroll-scrolling .c-scrollbar,
-.has-scroll-dragging .c-scrollbar {
-  opacity: 1;
-}
-[data-scroll-direction="horizontal"] .c-scrollbar {
-  width: 100%;
-  height: 10px;
-  top: auto;
-  bottom: 0;
-  transform: scaleY(1);
-}
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
-  transform: scaleY(1.3);
-}
-
-.c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-.has-scroll-dragging .c-scrollbar_thumb {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-}
-[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
-  right: auto;
-  bottom: 0;
-} */
 
 /* Navigation */
 
@@ -365,7 +274,7 @@ a {
 }
 
 .form_card__two__toevoeging:before {
-  content: url('../public/assets/creatie/creatie_toevoeging_form_extra.svg');
+  content: url("../public/assets/creatie/creatie_toevoeging_form_extra.svg");
   position: absolute;
   display: block;
   right: -12%;
@@ -375,7 +284,7 @@ a {
 }
 
 .form_card__two__aanpassing:before {
-  content: url('../public/assets/creatie/creatie_aanpassing_form_extra.svg');
+  content: url("../public/assets/creatie/creatie_aanpassing_form_extra.svg");
   position: absolute;
   display: block;
   right: -12%;
@@ -385,7 +294,7 @@ a {
 }
 
 .form_card__two__overig:before {
-  content: url('../public/assets/creatie/creatie_overig_form_extra.svg');
+  content: url("../public/assets/creatie/creatie_overig_form_extra.svg");
   position: absolute;
   display: block;
   right: -12%;
